--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.6",
-    "nunjucks": "^3.2.2",
-    "sqlite3": "^5.0.0"
+    "nodemon": "^2.0.7",
+    "nunjucks": "^3.2.3",
+    "sqlite3": "^5.0.2"
+  },
+  "emmet.includeLanguages": {
+    "njk": "html"
   }
 }
